--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="on_fon">Показать фон</string>
+    <string name="title">My Notes</string>
+    <string name="about">About</string>
+    <string name="exit">Exit</string>
 </resources>
