ДЗ 8: 1) Создал свой тулбар; 2) Добавил меню из активити и из фрагмента.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title">My Notes</string>
     <string name="about">About</string>
     <string name="exit">Exit</string>
+    <string name="toast">Toast</string>
 </resources>
