--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="about">About</string>
     <string name="exit">Exit</string>
     <string name="toast">Toast</string>
+    <string name="clear">Clear</string>
+    <string name="popup">Popup</string>
 </resources>
