--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="clear">Clear</string>
     <string name="popup">Popup</string>
     <string name="btn_exit">Выход</string>
+    <string name="hello">Поздороваться</string>
 </resources>
